[gd_scene load_steps=2 format=3 uid="uid://46ki3f6y5w43"]

[ext_resource type="Script" uid="uid://c0jws27kwrjyl" path="res://scripts/3d/main_menu_buttons.gd" id="1_8o14n"]

[node name="MainMenuButtons" type="VBoxContainer"]
custom_minimum_size = Vector2(768, 0)
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("1_8o14n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGameButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Start Game"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Quit"
